--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "drone-control",
   "version": "1.0.0",
   "main": "main.js",
+  "scripts": {
+    "start": "electron .",
+    "dev": "electron ."
+  },
   "dependencies": {
     "electron": "^28.3.3"
   }
